# ledger-zcash-utils

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.changeset/: find-block-height.md  hip-clouds-pull.md  moody-lizards-say.md  npm-readme-rework.md  old-sides-accept.md  slimy-candies-guess.md  yummy-ads-roll.md
.github/workflows/: build-test.yml  publish-release.yml
crates/zcash-cli/: Cargo.toml
crates/zcash-cli/src/: main.rs
crates/zcash-cli/tests/: cli.rs  cli_integration.rs
crates/zcash-crypto/: Cargo.toml
crates/zcash-crypto/src/: decrypt.rs  error.rs  keys.rs  lib.rs  network.rs
crates/zcash-crypto/tests/: known_vectors.rs
crates/zcash-crypto/tests/fixtures/: tx_0b5baa0c_h3055417.hex  tx_18b4fcbb_h1181303_testnet.hex  tx_22e5f6de_h3055407.hex  tx_60c1afab_h2115988_testnet.hex  tx_68db58bf_h2618505_testnet.hex  tx_c534920d_h954650_testnet.hex  tx_d592576d_h3047167.hex
crates/zcash-ffi-mobile/src/: lib.rs  zcash.udl
crates/zcash-ffi-node/: Cargo.toml
crates/zcash-ffi-node/src/: lib.rs
crates/zcash-grpc/: Cargo.toml
crates/zcash-grpc/src/: client.rs  sync.rs
crates/zcash-key-derive/: Cargo.toml
crates/zcash-key-derive/src/: error.rs  lib.rs  main.rs
crates/zcash-sync/: Cargo.toml
crates/zcash-sync/src/: client.rs  lib.rs  sync.rs
crates/zcash-sync/tests/: integration_sync.rs
docs/: architecture.md  block-sync.md  build-targets.md  ffi-mobile.md  ffi-node.md  key-derivation.md
examples/: bench.ts  sync-tx.node.ts
scripts/: build-cli-linux.sh  build-cli-macos.sh  build-linux.sh  build-macos.sh  build-napi.sh  coverage.sh
