[workspace]
resolver = "2"
members = [
    "crates/zcash-crypto",
]
default-members = ["crates/zcash-crypto"]

# ──────────────────────────────────────────────────────────────────────────────
# Shared dependency versions — all crates inherit from here.
# Individual crates may add extra features on top (e.g. lightwalletd-tonic).
# ──────────────────────────────────────────────────────────────────────────────
[workspace.dependencies]

# Zcash ecosystem
zcash_client_backend  = { version = "0.21", default-features = false }
zcash_keys            = { version = "0.12", features = ["orchard", "sapling", "transparent-inputs"] }
zcash_address         = "0.10"
zcash_note_encryption = "0.4"
zcash_primitives      = { version = "0.26", default-features = false }
zcash_protocol        = "0.7"
zip32                 = "0.2"
orchard               = { version = "0.11", default-features = false }
sapling-crypto        = { version = "0.5", default-features = false }

# Key derivation
bip39   = "2"
bitcoin = "0.32"

# Parallelism
rayon   = "1"

# Utilities
anyhow     = "1"
thiserror  = "1"
hex        = "0.4"
uuid       = { version = "1", features = ["v4"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
time       = { version = "0.3", features = ["std"] }
clap       = { version = "4", features = ["derive"] }

# Test utilities (dev-only)
assert_cmd = "2"
