[package]
name = "zcash-key-derive"
version = "0.1.0"
edition = "2021"
description = "Derive UFVK and xpub from a BIP-39 mnemonic for Zcash accounts"
license = "MIT OR Apache-2.0"

[[bin]]
name = "zcash-key-derive"
path = "src/main.rs"

[lib]
name = "zcash_key_derive"
path = "src/lib.rs"

[dependencies]
# zcash_keys 0.12.0 requires features to unlock the `keys` module.
# transparent-inputs enables transparent key derivation (BIP-44 inside USK).
# sapling + orchard enable those pools in the UFVK.
zcash_keys = { version = "0.12", features = ["orchard", "sapling", "transparent-inputs"] }
# ZIP-316 UFVK encoding/decoding helpers.
zcash_address = "0.10"
# Must match the version pulled by zcash_keys 0.12.0 (0.7.x)
zcash_protocol = "0.7"
# Must match the version pulled by zcash_keys 0.12.0 (0.2.x)
zip32 = "0.2"

# Pool-specific viewing keys
sapling-crypto = "0.5"
orchard = "0.11"

# Hex encoding for raw key bytes
hex = "0.4"

# BIP-39 mnemonic → seed bytes
bip39 = "2"

# BIP-32 xpub derivation at m/44'/133'/{account}'
# In bitcoin 0.32, ExtendedPrivKey/ExtendedPubKey were renamed to Xpriv/Xpub.
bitcoin = "0.32"

# CLI
clap = { version = "4", features = ["derive"] }

# JSON output
serde_json = "1"

# Error handling
thiserror = "1"
